# picodrone

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  Dockerfile  README.md  picodrone Debug.launch  picodrone.ioc
Core/Inc/: nrf24_driver.h  nrf24_registers.h
Core/Src/: main.c  nrf24_driver.c  stm32f1xx_hal_msp.c
common/: CMakeLists.txt
common/include/: NRF24.h  Util.h  gpio.hpp  i2c.hpp  pwm.hpp  system.hpp  task_base.hpp  uart.hpp  utility.hpp
common/include/BMP388/: BMP388.h
common/include/HAL/: GPIO.h  I2C.h  PWM.h  SPI.h  System.h  UART.h  tmp_System.h
common/include/hal/: controller.h
common/include/utility/: error.hpp
common/lib/: NRF24.cpp  i2c.cpp  uart.cpp
common/lib/OS/: task_base.cpp  task_interface.cpp
common/src/hal/: controller.c  controller.cpp
docs/: README.md
drone/: CMakeLists.txt  drone_openocd.cfg  main.c  main.cpp
drone/hardware/pcb/final_design_v1/: final_design_v1.b#3  final_design_v1.b#4  final_design_v1.b#6  final_design_v1.b#8  final_design_v1.b#9  final_design_v1.s#3  final_design_v1.s#5  final_design_v1.s#7  final_design_v1.s#8
drone/hardware/pcb/final_design_v1/CAMOutputs/Assembly/: final_design_v1.txt
drone/hardware/pcb/final_design_v1/CAMOutputs/GerberFiles/: copper_top.gbr  profile.gbr  silkscreen_bottom.gbr  soldermask_bottom.gbr  soldermask_top.gbr
drone/hardware/pcb/final_design_v2/: final_design_v2.kicad_pcb-bak  final_design_v2.net  final_design_v2.pro
drone/hardware/pcb/final_design_v2/gerber/: final_design_v2-B_Cu.gbr  final_design_v2-B_SilkS.gbr  final_design_v2-F_Paste.gbr  final_design_v2-F_SilkS.gbr  final_design_v2-NPTH.drl  final_design_v2-PTH.drl
drone/hardware/pcb/i2c_stm32/: i2c_stm32.b#2  i2c_stm32.brd  i2c_stm32.cam  i2c_stm32.s#4
drone/hardware/pcb/i2c_stm32/CAMOutputs/GerberFiles/: profile.gbr  silkscreen_bottom.gbr
drone/hardware/pcb/lib/: 1459411900832-nrf24l01plus.lbr  CMT-6635C-030.lbr  STM32F103C8T6.lbr
drone/hardware/pcb/mosfet/CAMOutputs/GerberFiles/: gerber_job.gbrjob
drone/include/: Config.h  HeartBeatTask.hpp  Task_BMP.h  Task_HeartBeat.h  Task_MPU.h  Task_NRF.h  Task_UART.h  Tasks.h  USART1Queue.hpp  USART1Task.hpp  bmp_i2c1_task.h  config.h  debug_task.hpp  task_manager.h
drone/include/config/: controller_cfg.hpp
drone/lib/: HeartBeatTask.cpp  Task_BMP.cpp  Task_HeartBeat.cpp  Task_MPU.cpp  Task_NRF.cpp  Task_UART.cpp  Tasks.cpp  USART1Queue.cpp  USART1Task.cpp  bmp_i2c1_task.c  bmp_i2c1_task.cpp  config.cpp  heart_beat_task.cpp  task_manager.cpp  uart_task.cpp
hardware/: Dockerfile  config.kibot.yaml
hardware/pcb/: NRF24L01.lbr  design_picodrone.sch
hardware/pcb/Eagle/final_design_v1/: final_design_v1.b#1  final_design_v1.b#2  final_design_v1.b#5  final_design_v1.b#7  final_design_v1.brd  final_design_v1.s#1  final_design_v1.s#4  final_design_v1.s#6  final_design_v1.s#9  final_design_v1.sch
hardware/pcb/Eagle/i2c_stm32/: i2c_stm32.b#4  i2c_stm32.b#8  i2c_stm32.b#9  i2c_stm32.s#2  i2c_stm32.s#5  i2c_stm32.s#7  i2c_stm32.s#9
hardware/pcb/Eagle/mosfet/: mosfet_smt_test.b#1  mosfet_smt_test.b#8  mosfet_smt_test.brd  mosfet_smt_test.s#1  mosfet_smt_test.s#2  mosfet_smt_test.s#4  mosfet_smt_test.sch
hardware/pcb/KiCAD/final_design_v2/: IMPROVEMENTS.md  _autosave-final_design_v2.kicad_pcb  final_design_v2  final_design_v2.kicad_pcb  final_design_v2.sch  final_design_v2.sch-bak  final_design_v2.xml  fp-info-cache
hardware/pcb/KiCAD/final_design_v2/gerber/: final_design_v2-B_Mask.gbr  final_design_v2-B_Paste.gbr  final_design_v2-Edge_Cuts.gbr  final_design_v2-F_Cu.gbr  final_design_v2-F_Mask.gbr  final_design_v2-In1_Cu.gbr  final_design_v2-In2_Cu.gbr  final_design_v2-job.gbrjob
hardware/pcb/KiCAD/final_design_v3/: final_design_v3.kicad_pcb  final_design_v3.kicad_pcb-bak  final_design_v3.net  final_design_v3.pro  final_design_v3.sch  final_design_v3.sch-bak  final_design_v3.xml  fp-info-cache
hardware/pcb/KiCAD/final_design_v3/gerber/: final_design_v3-B_Cu.gbr  final_design_v3-B_Mask.gbr  final_design_v3-B_Paste.gbr  final_design_v3-B_SilkS.gbr  final_design_v3-Edge_Cuts.gbr  final_design_v3-F_Cu.gbr  final_design_v3-F_Mask.gbr  final_design_v3-F_Paste.gbr  final_design_v3-F_SilkS.gbr  final_design_v3-In1_Cu.gbr  final_design_v3-In2_Cu.gbr  final_design_v3-job.gbrjob  final_design_v3.drl
hardware/pcb/KiCAD/final_design_v3/picknplace/: final_design_v3-bottom-pos.csv  final_design_v3-top-pos.csv  final_design_v3.csv
hardware/pcb/assembly_smt/: assembly_smt_test.sch
hardware/pcb/i2c_stm32/: i2c_stm32.b#1  i2c_stm32.b#2  i2c_stm32.b#3  i2c_stm32.b#4  i2c_stm32.b#5  i2c_stm32.b#6  i2c_stm32.b#7  i2c_stm32.b#8  i2c_stm32.b#9  i2c_stm32.brd  i2c_stm32.s##  i2c_stm32.s#1  i2c_stm32.s#2  i2c_stm32.s#3  i2c_stm32.s#4  i2c_stm32.s#5  i2c_stm32.s#6  i2c_stm32.s#7  i2c_stm32.s#8  i2c_stm32.s#9  i2c_stm32.sch
hardware/pcb/i2c_stm32/CAMOutputs/DrillFiles/: drill_1_16.xln
hardware/pcb/i2c_stm32/CAMOutputs/GerberFiles/: copper_top.gbr  silkscreen_top.gbr  soldermask_bottom.gbr  solderpaste_top.gbr
hardware/pcb/lib/Eagle/: BMP280.lbr  BMP388.lbr  MPU6050.lbr  SS34.lbr
hardware/pcb/lib/KiCAD/BMP388/: PQFN50P200X200X80-10N.kicad_mod
hardware/pcb/main_smt/: design_picodrone.brd  design_picodrone.sch
hardware/pcb/mosfet/: mosfet_smt_test.b#2  mosfet_smt_test.b#3  mosfet_smt_test.b#5  mosfet_smt_test.b#6  mosfet_smt_test.b#7
hardware/pcb/mosfet/CAMOutputs/DrillFiles/: drill_1_16.xln
hardware/pcb/mosfet_smt/: mosfet_smt_test.b#3  mosfet_smt_test.b#7  mosfet_smt_test.b#9  mosfet_smt_test.s#2
include/: GPIO.hpp  README.md  TestClass.h  Timer.hpp  Types.hpp  gpio.hpp  i2c.hpp  pwm.hpp  system.hpp  tasks.hpp  types.hpp  uart.hpp
include/OS/: task_interface.h  tasks.h
lib/: README.md  TestClass.cpp
lib/OS/: task_interface.cpp  tasks.cpp
scripts/: README.md  build.sh  openocd.cfg  prgrm_size.db  run_build.sh  test.sh  track_size.py
src/: main.c  main.cpp
system/: FreeRTOSConfig.h  README.md  linker_stm32f103xb.ld  startup_stm32f103xb.c  toolchain.cmake
tests/: README.md
transmitter/: CMakeLists.txt  main.cpp
(+19 files in other folders)
